[package]
name = "sha1sum"
version = "0.1.0"
authors = ["Meng Zhuo <mengzhuo1203@gmail.com>"]
homepage = "https://github.com/mengzhuo/sha1sum.rs"
repository = "https://github.com/mengzhuo/sha1sum.rs"
categories = ["command-line-utilities", "cryptography"]
license  = "MIT"

[dependencies]
rust-crypto = "^0.2"
